add contribute page and github repository link

--- a/theme/index.html
+++ b/theme/index.html
@@ -85,13 +85,15 @@
 			<!-- subscribe block -->
 			<div class="subscribe">
 				<div class="container">
+					<h4>How to Contribute? <a href="contribute.html">Click me</a> </h4>
+					<br><br>
 					<div class="sub-content">
 						<div class="row">
 							<div class="col-md-6 col-sm-6">
 								<!-- subscribe update message -->
 								<div class="sub-message">
 									<!-- heading -->
-									<h3>An inconvenience or inquiry. Please contact us.</h3>
+									<h3>An inconvenience or inquiry.<br>Please contact us.</h3>
 									<!-- paragraph -->
 									<p><br>We are waiting for your feedback.<br><br>Mail : sochubert@gmail.com<br>Tel : (+82) 010 2707 5682</p>
 							</div>
@@ -107,7 +109,11 @@
 					<div class="above-content">
 						<h4>Made by team 'Undecided'</h4>
 						<!-- testimonial content / paragraph -->
-						<p1>Minjun Kang<br>Taeyoon Kwon<br>Mineung Park<br>Minjae Lee<br>Hongil Son</p1>
+						<p1>Minjun Kang <a href="https://github.com/Min-Jun-Kang/minjun">Github</a> <br>
+							Taeyoon Kwon <a href="https://github.com/Connoriginal/oss-dev">Github</a> <br>
+							Mineung Park <a href="https://github.com/nadasansu/OSS-dev">Github</a> <br>
+							Minjae Lee <a href="https://github.com/sochubert/oss2020">Github</a> <br>
+							Hongil Son <a href="https://github.com/sonhl0723/openS_1">Github</a> </p1>
 						<!-- heading -->
 					</div>
 				</div>
