Add License page and some modification.

--- a/theme/contribute.html
+++ b/theme/contribute.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<div class="wrapper">
+		<div class="banner">
+			<div class="container">
+				<div class="banner-content">
+					<a href="#"><img class="img-responsive" src="img/logo.png" alt="" width="800"></a>
+				</div>
+			</div>
+		</div>
 	<meta charset="UTF-8">
 	<title>Contribute</title>
 </head>
 <body>
-	<h4> This is contribute page. </h4>
+	<body bgcolor="#808080"></body>
+	<h2> How to contribute? </h2>
+	<br>
+	<h3> Feature</h3>
 </body>
 
 </html>
