--- a/theme/index.html
+++ b/theme/index.html
@@ -86,6 +86,7 @@
 			<div class="subscribe">
 				<div class="container">
 					<h4>How to Contribute? <a href="contribute.html">Click me</a> </h4>
+					<h4>About license? <a href="license.html">Here :)</a></h4>
 					<br><br>
 					<div class="sub-content">
 						<div class="row">
@@ -122,9 +123,6 @@
 			<!-- footer -->
 			<footer>
 				<div class="container">
-					<!-- navigation link -->
-					<p class="nav-link"><a href="#"> <a href="#">Support</a> &nbsp;|&nbsp; <a href="#">Privacy Policy</a></p>
-					<!-- copy right -->
 					<!-- This theme comes under Creative Commons Attribution 4.0 Unported. So don't remove below link back -->
 					<p class="copy-right">Copyright &copy; 2014 <a href="#">Your Site</a> | Designed By : <a href="http://www.indioweb.in/portfolio">IndioWeb</a>, All rights reserved. </p>
 				</div>
