Click the banner to go to the initializing page and add source code link

--- a/theme/contribute.html
+++ b/theme/contribute.html
@@ -5,7 +5,7 @@
 		<div class="banner">
 			<div class="container">
 				<div class="banner-content">
-					<a href="#"><img class="img-responsive" src="img/logo.png" alt="" width="800"></a>
+					<a href="index.html"><img class="img-responsive" src="img/logo.png" alt="" width="800"></a>
 				</div>
 			</div>
 		</div>
