--- a/theme/index.html
+++ b/theme/index.html
@@ -110,7 +110,9 @@
 					<div class="above-content">
 						<h4>Made by team 'Undecided'</h4>
 						<!-- testimonial content / paragraph -->
-						<p1>Minjun Kang <a href="https://github.com/Min-Jun-Kang/minjun">Github</a> <br>
+						<p1>Source Code <br><a href="https://github.com/Hanyang-Erica-Oss-dev-2020-Undecided/Decision-Helper">App</a>
+							<a href="https://github.com/Hanyang-Erica-Oss-dev-2020-Undecided/DecisionHelper_Webpage">Web</a><br><br>
+							Minjun Kang <a href="https://github.com/Min-Jun-Kang/minjun">Github</a> <br>
 							Taeyoon Kwon <a href="https://github.com/Connoriginal/oss-dev">Github</a> <br>
 							Mineung Park <a href="https://github.com/nadasansu/OSS-dev">Github</a> <br>
 							Minjae Lee <a href="https://github.com/sochubert/oss2020">Github</a> <br>
