Upload contribute and license

--- a/theme/contribute.html
+++ b/theme/contribute.html
@@ -14,9 +14,27 @@
 </head>
 <body>
 	<body bgcolor="#808080"></body>
-	<h2> How to contribute? </h2>
-	<br>
-	<h3> Feature</h3>
+	<h1>Contribute</h1><br>
+	<h4>All kinds of contributions (enhancements, new features, documentation & code improvements, issues & bugs reporting) are welcome.</h4>
+	<hr>
+	<h2>Issue</h2><br>
+	<h4>When you create an issue to report a bug or ask a question, please include your:<br>
+		<ul><li>Operating system with version And all others related information that are susceptible to help us.</li></ul></h4>
+	<hr>
+	<h2>Pull Requests</h2><br>
+	<h4>All pull requests must be done on the pull_request branch. Before a pull request:<br>
+		<ul>
+			<li>There is no test yet so verify that your code is running well.</li><br>
+			<li>Don't forget to update user and/or developer documentation if it's necessary</li>
+	</h4>
+	</ul>
+	<hr>
+	<h2>Adding Users</h2>
+	<h4>You should use the decisionhelper folder to make your account or make your own categories You need to handle all of the checking files to the Android Studio.<br>
+		<ul>
+			<li>There are files that you can change</li><br>
+			<li>You have to check your new file have error</li></h4>
+		</ul>
 </body>
 
 </html>
