--- a/theme/license.html
+++ b/theme/license.html
@@ -15,8 +15,14 @@
 </head>
 <body>
     <body bgcolor="#808080"></body>
-    <h2></h2>License</h2>
-    <br>
+    <h1>License</h1>
+    <hr>
+    <h3><a href="https://github.com/nadasansu/Decision-Helper/blob/develop/LICENSE">Apache 2.0</a></h3><br>
+    <h4>Licensed under the Apache License, Version 2.0 (the "License"); you may not use this work except in compliance with the License.<br>
+        You may obtain a copy of the License in the LICENSE file, or at:<br>
+        <a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a><br>
+        Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, <br>
+        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</h4>
 </body>
 
 </html>
