--- a/theme/index.html
+++ b/theme/index.html
@@ -40,11 +40,23 @@
 					</div>
 				</div>
 			</div>
-			
 			<!-- feature block -->
 			<div class="feature">
 				<div class="container">
 					<div class="row">
+						<h2>About Project</h2>
+						<br>
+						<ul>
+							<li><a href="contribute.html">Contribute</a></li>
+							<li><a href="license.html">License</a></li>
+							<li><a href="https://github.com/Hanyang-Erica-Oss-dev-2020-Undecided/Decision-Helper/blob/develop/CodingConvention.md">Coding Convention</a> </li>
+							<li><a href="https://github.com/Hanyang-Erica-Oss-dev-2020-Undecided/Decision-Helper/blob/develop/Document.md">Document</a></li>
+							<li><a href="https://github.com/Hanyang-Erica-Oss-dev-2020-Undecided/Decision-Helper/blob/develop/OurProject.md">Our Project</a> </li>
+							<li><a href="https://github.com/Hanyang-Erica-Oss-dev-2020-Undecided/Decision-Helper/blob/develop/README.md">ReadMe</a> </li>
+							<li><a href="https://github.com/Hanyang-Erica-Oss-dev-2020-Undecided/Decision-Helper">App Source Code</a></li>
+							<li><a href="https://github.com/Hanyang-Erica-Oss-dev-2020-Undecided/DecisionHelper_Webpage">Web Source Code</a></li>
+						</ul>
+						<br><br>
 						<div class="col-md-4 col-sm-4">
 							<!-- feature item -->
 							<div class="feature-item">
@@ -85,9 +97,6 @@
 			<!-- subscribe block -->
 			<div class="subscribe">
 				<div class="container">
-					<h4>How to Contribute? <a href="contribute.html">Click me</a> </h4>
-					<h4>About license? <a href="license.html">Here :)</a></h4>
-					<br><br>
 					<div class="sub-content">
 						<div class="row">
 							<div class="col-md-6 col-sm-6">
@@ -110,8 +119,6 @@
 					<div class="above-content">
 						<h4>Made by team 'Undecided'</h4>
 						<!-- testimonial content / paragraph -->
-						<p1>Source Code <br><a href="https://github.com/Hanyang-Erica-Oss-dev-2020-Undecided/Decision-Helper">App</a>
-							<a href="https://github.com/Hanyang-Erica-Oss-dev-2020-Undecided/DecisionHelper_Webpage">Web</a><br><br>
 							Minjun Kang <a href="https://github.com/Min-Jun-Kang/minjun">Github</a> <br>
 							Taeyoon Kwon <a href="https://github.com/Connoriginal/oss-dev">Github</a> <br>
 							Mineung Park <a href="https://github.com/nadasansu/OSS-dev">Github</a> <br>
